style.css
:root {
    --border-color: #b5a192;
    --square-background: #c8bbad;
    --text-color: #4e453e;
}

* {
    margin:0;
    padding:0;
}

body {
    background-color: antiquewhite;
    height: 100vh;
    
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.head {
    display: flex;
    align-items: center;
    justify-content: space-between;

    width: 600px;
}


a {
    margin-left: 0;

    text-decoration: none;
    border: 3px solid transparent;
    border-radius: 10px;
    padding: 10px;
    padding-left: 20px;
    padding-right: 20px;
    background-color: #996c4a;
    color: #f2ede7;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 20px;
    font-weight: bold;
    box-sizing: border-box;
}

a:active {
    border: 3px solid rgb(125, 59, 37);
}

h1 {
    font-size: 88px;
    color: var(--text-color);

    justify-self: center;
    margin: 0 auto;
    margin-left: 215px;
}

.container {
    background-color: var(--border-color);
    border: 10px solid var(--border-color);
    border-radius: 10px;
}

/* .container::before {
    content: "";
    position: absolute;
    width: 100%;
    height: 100%;
    background: repeating-linear-gradient(to right, black 0px, black 2px, transparent 2px, transparent 150px),
                repeating-linear-gradient(to bottom, black 0px, black 2px, transparent 2px, transparent 150px);
    pointer-events: none;
} */

.cell {
    border: 1px solid var(--border-color);
    border-radius: 5px;
    background-color: var(--square-background);
    background-clip: padding-box;

    justify-self: center;
    align-self: center;

    text-align: center;
    align-content: center;
    font-size: 72px;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: 900;
    color: var(--text-color);

    /* width: calc(600px/4.4);
    height: calc(600px/4.4); */
    box-sizing: border-box;

    transition: transform 0.2s ease-in-out, width 0.1s, height 0.1s, background-color 1s;
}

.square {
    border: 1px solid var(--border-color);
    border-radius: 5px;
    background-color: var(--square-background);
    background-clip: padding-box;

    justify-self: center;
    align-self: center;
}

.two {
    background-color: antiquewhite;
}

.overlay {
    align-content: center;
    text-align: center;
    font-size: 80px;
    color: var(--text-color);
    
    border-radius: 10px;

    position: absolute;
    background-color: rgba(245, 245, 245, 0.516);
}

